[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Sprites/Red.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/EnemyMovementSM.gd" type="Script" id=4]
[ext_resource path="res://Scripts/EnemyActionSM.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 160.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.51191, 9.21596 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
light_mask = 2
position = Vector2( -0.140305, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HP_bar" type="ProgressBar" parent="."]
margin_left = -20.8059
margin_top = -25.1307
margin_right = 19.1941
margin_bottom = -11.1307
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementSM" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ActionSM" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="area_entered" from="Sensor" to="." method="_on_Sensor_area_entered"]
[connection signal="body_entered" from="Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_Sensor_body_exited"]
